--- a/castrillo-eventos/src/components/Header.module.css
+++ b/castrillo-eventos/src/components/Header.module.css
@@ -3,9 +3,10 @@
     position: fixed;
     z-index: 1000;
     top: 0;   
-    padding: 5px 0;
+    display: flex;
+    height: 96px;
     background: rgb(54,70,82);
-    background: linear-gradient(90deg, rgba(54,70,82,1) 0%, rgba(78,98,114,1) 80%, rgba(64,81,95,1) 100%);
+    background: linear-gradient(90deg, #19222E 0%, #2F425B 80%, #1D2736 100%);
 }
 .container {
     width: 90%;
@@ -14,12 +15,21 @@
     align-items: center;
     justify-content: space-between;
 }
+
 .imgLogo {
-    width: 147px;
+    width: 100px;
 }
 .nav_links {
     display: flex;
     gap: 20px;
+}
+.nav_links_mobile {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    gap: 30px;
+    flex-direction: column;
 }
 .nav_links li {
     color: #fff;
@@ -30,7 +40,28 @@
     gap: 10px;
     align-items: center;
 }
+
 .active {
     font-weight: bold;
     border-bottom: 2px solid #C54477;
+}
+.mobile {
+    display: none;
+}
+.menu_container {
+    position: absolute;
+    padding: 20px 40px 40px;
+    right: 0;
+    
+    background: linear-gradient(90deg, #2F425B 0%, #1D2736 100%);
+}
+
+@media (max-width: 1000px) {
+    .desktop {
+        display: none;
+    }
+    .mobile {
+        display: block;
+    }
+    
 }
