--- a/castrillo-eventos/src/components/BannerHome.module.css
+++ b/castrillo-eventos/src/components/BannerHome.module.css
@@ -1,11 +1,27 @@
+
 .container {
-    width: 100%;
-    height: 600px;
-    margin: 93px auto 0;
-    cursor: grab;
+    height: 100vh;
+    background-image: url(../assets/BannerInicial.svg);
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* padding-left: 50px; */
+    justify-content: center;
+    background-repeat: no-repeat;
+    
 }
 .container img {
-    width: 100%;
-    height: 600px;
+    width: 700px;
 }
 
+@media (max-width: 858px) {
+    .container img {
+        width: 500px;
+    }
+}
+@media (max-width: 558px) {
+    .container img {
+        width: 300px;
+    }
+}
