Parte da hora duvidas frequentes

--- a/castrillo-eventos/src/components/componentsHome/BannerHome.module.css
+++ b/castrillo-eventos/src/components/componentsHome/BannerHome.module.css
@@ -1,7 +1,7 @@
 
 .container {
     height: 100vh;
-    background-image: url(../assets/BannerInicial.svg);
+    background-image: url(../../assets/BannerInicial.svg);
     background-size: cover;
     display: flex;
     flex-direction: column;
