--- a/castrillo-eventos/src/components/componentsHome/BannerEventos.module.css
+++ b/castrillo-eventos/src/components/componentsHome/BannerEventos.module.css
@@ -11,12 +11,12 @@
 
 .inner {
     display: flex;
-    /* gap: 20px; */
+    gap: 20px;
 }
 
 .item {
-    width: 400px; 
-    height: 500px; 
+    width: 280px; 
+    height: 350px; 
     /* padding: 14px; */
 }
 
@@ -28,7 +28,6 @@
 }
 
 .carrossel {
-    cursor: grab;
     overflow: hidden;
 }
 
