--- a/castrillo-eventos/src/components/componentsHome/BannerHome.module.css
+++ b/castrillo-eventos/src/components/componentsHome/BannerHome.module.css
@@ -1,27 +1,18 @@
 
 .container {
-    height: 100vh;
-    background-image: url(../../assets/BannerInicial.svg);
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* padding-left: 50px; */
-    justify-content: center;
-    background-repeat: no-repeat;
-    
+    width: 100%;
+    height: 90vh;
+    margin: 93px auto 0;
+    cursor: grab;
 }
 .container img {
-    width: 700px;
+    width: 100%;
+    height: 90vh;
 }
 
-@media (max-width: 858px) {
-    .container img {
-        width: 500px;
-    }
-}
-@media (max-width: 558px) {
-    .container img {
-        width: 300px;
+
+@media (max-width: 675px) {
+    .container {
+        display: none;
     }
 }
