--- a/castrillo-eventos/src/components/componentsHome/Footer.module.css
+++ b/castrillo-eventos/src/components/componentsHome/Footer.module.css
@@ -4,6 +4,8 @@
     width: 100%;
     overflow: hidden;
     padding: 30px 50px;
+    display: flex;
+    justify-content: space-between;
     box-sizing: border-box;
 }
 .container img {
@@ -15,4 +17,11 @@
     padding: 5px;
     gap: 15px;
     list-style: none;
+}
+@media (max-width: 600px) {
+    .container {
+        gap: 30px;
+        flex-direction: column;
+        align-items: center;
+    }
 }
