--- a/castrillo-eventos/src/components/componentsHome/BannerEventos.module.css
+++ b/castrillo-eventos/src/components/componentsHome/BannerEventos.module.css
@@ -17,7 +17,43 @@
 .item {
     width: 280px; 
     height: 350px; 
-    /* padding: 14px; */
+    position: relative;
+    transition: 0.5s;
+    background: rgba(255, 255, 255, 0.20);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 14px; 
+
+}
+
+.item:hover img {
+    transition: 0.5s;
+}
+
+.item:hover .infoEvento {
+    display: flex;
+}
+
+.infoEvento {
+    display: none;
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.558); 
+    color: white; 
+    border-radius: 14px; 
+    /* z-index: 32000; */
+}
+.infoEvento p {
+    text-align: center;
+    padding: 10px;
+}
+.infoEvento h3 {
+    font-size: 30px;
 }
 
 .item img {
@@ -26,7 +62,6 @@
     border-radius: 14px;
     pointer-events: none;
 }
-
 .carrossel {
     overflow: hidden;
 }
