--- a/castrillo-eventos/src/components/componentsHome/ComoReservar.module.css
+++ b/castrillo-eventos/src/components/componentsHome/ComoReservar.module.css
@@ -3,7 +3,8 @@
     background: linear-gradient(90deg, #19222E 0%, #2F425B 80%, #1D2736 100%);
     width: 100%;
     overflow: hidden;
-    padding: 30px 50px;
+    padding: 0 80px 150px;
+    
     box-sizing: border-box;
 }
 .ajuste_titulo,.ajuste_descricao {
