--- a/castrillo-eventos/src/components/componentsHome/Duvidas.module.css
+++ b/castrillo-eventos/src/components/componentsHome/Duvidas.module.css
@@ -10,7 +10,7 @@
 .hr {
     width: 25%;
     height: 2px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     background-color: #C54477;
 }
 .perguntas {
