Tela de solicitar orcamento

--- a/castrillo-eventos/src/components/componentsHome/StepReserva.css
+++ b/castrillo-eventos/src/components/componentsHome/StepReserva.css
@@ -77,3 +77,35 @@
 .primeira, .ultima {
   width: 300px;
 }
+@media screen and (max-width: 1058px) {
+
+  .primeira, .ultima {
+    width: 200px;
+  }
+}
+@media screen and (max-width: 800px) {
+
+  .primeira, .ultima {
+    width: 100px;
+  }
+}
+@media screen and (max-width: 550px) {
+
+  .primeira, .ultima {
+    width: 50px;
+  }
+}
+@media screen and (max-width: 450px) {
+
+  .primeira, .ultima {
+    width: 0;
+  }
+  .passo.ativo {
+    width: 80px;
+    height: 80px;
+  }
+  .passo {
+    height: 60px;
+    width: 60px;
+  }
+}
