--- a/castrillo-eventos/src/index.css
+++ b/castrillo-eventos/src/index.css
@@ -66,3 +66,47 @@ button {
 .hoverRosa:hover {
   background-color: transparent;
 }
+.buttonAjuste {
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 20px;
+}
+
+.container-input {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 50%;
+  color: #fff;
+
+}
+.container-input input {
+  padding: 8px 10px;
+  border-radius: 16px;
+  font-family: 'Montserrat', sans-serif;
+  /* color: #454545; */
+  background-color: #ffffff16;
+  border:2px solid #40597a;
+  color: #d9d9d9;
+  font-size: 16px;
+
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(80%) sepia(0%) saturate(0%) hue-rotate(180deg) brightness(90%) contrast(90%);
+  cursor: pointer;
+}
+input[type="time"]::-webkit-calendar-picker-indicator {
+  filter: invert(80%) sepia(0%) saturate(0%) hue-rotate(180deg) brightness(90%) contrast(90%);
+  cursor: pointer;
+}
+.container-input select {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  border:2px solid #40597a;
+  color: #d9d9d9;
+  background-color: #ffffff1f;
+  padding: 8px 10px;
+  border-radius: 16px;
+  /* color: #454545; */
+  /* border:none; */
+}
