--- a/castrillo-eventos/src/components/componentsHome/BannerHome.module.css
+++ b/castrillo-eventos/src/components/componentsHome/BannerHome.module.css
@@ -11,8 +11,13 @@
 }
 
 
-@media (max-width: 675px) {
-    .container {
-        display: none;
+@media (max-width: 800px) {
+    .container, .container img {
+        height: 80vh;
+    }
+}
+@media (max-width: 700px) {
+    .container, .container img {
+       display: none;
     }
 }
