--- a/castrillo-eventos/src/components/componentsHome/ComoReservar.module.css
+++ b/castrillo-eventos/src/components/componentsHome/ComoReservar.module.css
@@ -1,9 +1,9 @@
 .container {
-    background: rgb(54,70,82);
-    background: linear-gradient(90deg, #19222E 0%, #2F425B 80%, #1D2736 100%);
+    /* background: rgb(54,70,82);
+    background: linear-gradient(90deg, #19222E 0%, #2F425B 80%, #1D2736 100%); */
     width: 100%;
     overflow: hidden;
-    padding: 0 80px 150px;
+    padding: 0 0 150px;
     
     box-sizing: border-box;
 }
