--- a/castrillo-eventos/src/components/componentsHome/Eventos.module.css
+++ b/castrillo-eventos/src/components/componentsHome/Eventos.module.css
@@ -1,9 +1,9 @@
 .container {
-    background: rgb(54,70,82);
-    background: linear-gradient(90deg, #19222E 0%, #2F425B 80%, #1D2736 100%);
+    /* background: rgb(54,70,82);
+    background: linear-gradient(90deg, #19222E 0%, #2F425B 80%, #1D2736 100%); */
     width: 100%;
     overflow: hidden;
-    padding: 109px 80px 150px;
+    padding: 109px 0 150px;
     box-sizing: border-box;
 }
 @media (max-width: 675px) {
@@ -31,5 +31,12 @@
     .colTituloButton {
         flex-direction: column;
         margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 500px) {
+    .container {
+    padding: 50px 0;
+
     }
 }
