--- a/castrillo-eventos/src/components/componentsSolicitarOrcamento/BotaoVoltarOrcamento.module.css
+++ b/castrillo-eventos/src/components/componentsSolicitarOrcamento/BotaoVoltarOrcamento.module.css
@@ -1,10 +1,15 @@
 .container {
     padding: 15px 20px;
+    background: rgb(54,70,82);
+    background: linear-gradient(90deg, #19222E 0%, #2F425B 80%, #1D2736 100%);  
 }
 .btn {
     border-radius: 50%;
-    /* padding: 10px; */
+    /* padding: s10px; */
     height: 46px;
     width: 46px;
-    border: 4px solid #C54477;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 4px solid #FFB6C1;
 }
