--- a/castrillo-eventos/src/components/componentsSolicitarOrcamento/FormularioReserva.module.css
+++ b/castrillo-eventos/src/components/componentsSolicitarOrcamento/FormularioReserva.module.css
@@ -15,6 +15,11 @@
   color: #d9d9d9;
   
 }
+.descricao {
+    margin: 5px 0;
+    color: #fff;
+    text-align: center;
+}
 .controleDasInputs {
     display: flex;
     margin-top: 30px;
