--- a/castrillo-eventos/src/components/componentsHome/Footer.module.css
+++ b/castrillo-eventos/src/components/componentsHome/Footer.module.css
@@ -18,10 +18,37 @@
     gap: 15px;
     list-style: none;
 }
-@media (max-width: 600px) {
+
+@media screen and (max-width: 900px) {
+    
     .container {
         gap: 30px;
         flex-direction: column;
-        align-items: center;
+        /* align-items: center; */
+        /* justify-content: center; */
     }
+    
+}
+@media screen and (max-width: 650px) {
+    .containerNav {
+        flex-direction: column;
+        gap: 30px !important;
+        
+    }
+    
+}
+.containerNav {
+    display: flex;
+    gap: 90px;
+}
+.containerNav .links {
+    list-style: none;
+    /* margin: 0; */
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.containerNav h3 {
+    color: #fff;
 }
