--- a/castrillo-eventos/src/components/FormularioReserva/FormularioReserva.module.css
+++ b/castrillo-eventos/src/components/FormularioReserva/FormularioReserva.module.css
@@ -5,15 +5,16 @@
     justify-content: space-between;
 }
 .form {
-    width: 50%;
+    width: 60%;
     margin: 10px auto;
-    height: 200px;
+    height: 250px;
     display: flex;
     flex-direction: column;
 }
-.inputEspecifico::placeholder {
-  color: #d9d9d9;
-  
+
+.tamanhoLabel {
+    text-align: bottom;
+    height: 40px;
 }
 .descricao {
     margin: 5px 0;
@@ -28,4 +29,43 @@
 .erro_msg {
     color: red;
     text-align: center;
+}
+.btnModalDecoracao {
+    padding: 8px 10px;
+  border-radius: 16px;
+  font-family: 'Montserrat', sans-serif;
+  /* color: #454545; */
+  background-color: #ffffff16;
+  border:2px solid #40597a;
+  color: #d9d9d9;
+  font-size: 16px;
+}
+@media screen and (max-width: 868px) {
+    .form {
+        width: 90%;
+    }
+}
+@media screen and (max-width: 868px) {
+    .form {
+        width: 100%;
+    }
+    .controleDasInputs {
+        flex-direction: column;
+    }
+    .tamanhoLabel {
+        margin-top: 10px;
+        height: auto;
+    }
+    .controleDasInputs {
+        display: flex;
+        margin-top: 0;
+        gap: 10px;
+    }
+    .container-input {
+        width: 100%;
+
+    }
+    .form {
+        height: auto;
+    }
 }
