--- a/castrillo-eventos/src/pages/SolicitarOrcamento/SolicitarOrcamento.module.css
+++ b/castrillo-eventos/src/pages/SolicitarOrcamento/SolicitarOrcamento.module.css
@@ -26,4 +26,14 @@
     color: #FFB6C1;
     
 }
-
+@media screen and (max-width : 500px) {
+    .titulo {
+        font-size: 40px;
+    }
+}
+@media screen and (max-width : 380px) {
+    .titulo {
+        font-size: 20px;
+    }
+    
+}
