--- a/src/components/FormularioReserva/FormularioReserva.module.css
+++ b/src/components/FormularioReserva/FormularioReserva.module.css
@@ -28,7 +28,7 @@
     gap: 10px;
 }
 .erro_msg {
-    color: red;
+    color: #FFB6C1;
     text-align: center;
 }
 .btnModalDecoracao {
@@ -41,9 +41,22 @@
   color: #d9d9d9;
   font-size: 16px;
 }
-@media screen and (max-width: 868px) {
-    .form {
-        width: 90%;
+.containerStepEbuttonMob{
+    display: none;
+}
+.buttonsMob {
+    display: flex;
+    justify-content: space-between;
+}
+@media screen and (max-width: 668px) {
+    .containerStepEbuttonMob{
+        display: block;
+    }
+    .containerStepEbutton {
+        display: none;
+    }
+    .buttonsMob div {
+        width: 45%;
     }
 }
 @media screen and (max-width: 868px) {
