--- a/src/components/headerPerfil/HeaderPerfil.module.css
+++ b/src/components/headerPerfil/HeaderPerfil.module.css
@@ -44,3 +44,8 @@
     color: #fff;
     font-weight: 400;
 }
+.active {
+    font-weight: bold !important;
+    font-size: 16px;
+    /* color: #f00 !important;  */
+}
