--- a/src/pages/Cadastro/Cadastro.module.css
+++ b/src/pages/Cadastro/Cadastro.module.css
@@ -7,23 +7,28 @@
     flex-direction: row;
 }
 .Banner{
-    /* max-height: 100vh; */
     height: 100vh;
 }
 
 
 .containerBanner{
-    background-image: url("../../assets/BannerLogin.svg");
+    background-image: url("../../assets/Background\ -\ Login.svg");
     background-repeat: no-repeat;
     background-size: cover;
-    width: 830px;
+    width: 50%;
     height: 100vh;
 }
-
+.containerLogo {
+    display: flex;
+    align-items: center;
+    height:80%;
+    justify-content: center;
+}
    
 
 
 .containerGeral {
+    width: 50%;
     display: flex;
     flex-direction: column;
     margin: 100px auto;
@@ -42,11 +47,6 @@
     color: #FFB6C1;
     
 }
-
-input {
-    width: 379px;
-    padding: 10px;
-  }
 
 span{
     color: white;
