Tela de evento especifico finalizada

--- a/src/pages/EventoEspecifico/EventoEspecifico.module.css
+++ b/src/pages/EventoEspecifico/EventoEspecifico.module.css
@@ -1,4 +1,5 @@
 .banner {
+    margin-top: 70px;
     width: 100%;
     height: 100vh;
     background-image: url('../../assets/BannerInicial.svg');
@@ -24,21 +25,88 @@
     width: 50%;
     font-weight: 400;
 }
-.container {
+.containerDecora {
     padding: 50px 80px;
     background: rgb(54,70,82);
     background: linear-gradient(90deg, #19222E 0%, #2F425B 80%, #1D2736 100%);
 
 }
 @media screen and (max-width: 768px) {
-    .container {
+    .containerDecora {
         padding: 0 40px;
     }
     
 }
 @media screen and (max-width: 468px) {
-    .container {
+    .containerDecora {
         padding: 0 30px;
+    }
+    
+}
+.header {
+    width: 100%;
+    position: fixed;
+    z-index: 1000;
+    top: 0;   
+    display: flex;
+    height: 96px;
+    background: rgb(54,70,82);
+    background: linear-gradient(90deg, #19222E 0%, #2F425B 80%, #1D2736 100%);
+}
+.container {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.imgLogo {
+    width: 100px;
+}
+.nav_links {
+    display: flex;
+    gap: 20px;
+}
+.nav_links_mobile {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    gap: 30px;
+    flex-direction: column;
+}
+.nav_links li {
+    color: #fff;
+    list-style: none;
+}
+.container_buttons {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.active {
+    font-weight: bold;
+    border-bottom: 2px solid #C54477;
+}
+.mobile {
+    display: none;
+}
+.menu_container {
+    position: absolute;
+    padding: 20px 40px 40px;
+    right: 0;
+    background: rgb(54,70,82);
+    background: linear-gradient(90deg, #243245 0%, #2F425B 62%, #1D2736 100%);
+}
+
+@media (max-width: 1000px) {
+    .desktop {
+        display: none;
+    }
+    .mobile {
+        display: block;
     }
     
 }
