--- a/src/pages/Gastronomia/Gastronomia.module.css
+++ b/src/pages/Gastronomia/Gastronomia.module.css
@@ -70,6 +70,7 @@
     padding: 80px 80px 20px;
     background: rgb(54,70,82);
     background: linear-gradient(90deg, #19222E 0%, #2F425B 80%, #1D2736 100%);
+    padding-bottom: 50px;
 
 }
 .hr {
@@ -95,7 +96,7 @@
     justify-content: center;
     display: flex;
     align-items: center;
-    gap: 60px;
+    gap: 120px;
 }
 .imgCard {
     width: 350px;
