--- a/src/components/FormularioCadastro/FormularioCadastro.module.css
+++ b/src/components/FormularioCadastro/FormularioCadastro.module.css
@@ -111,13 +111,16 @@ h1 {
 }
 
 .tituloCadastrado{
+    text-align: center;
     color: #fff;
-    font-size: 50px;
+    font-size: 40px;
 }
 
 .textoCadastrado{
+    text-align: center;
+
     color: #fff;
-    font-size: 32px;
+    font-size: 22px;
 }
 @media screen and (max-width: 668px){
     .containerInputs {
