--- a/src/pages/Gastronomia/Gastronomia.module.css
+++ b/src/pages/Gastronomia/Gastronomia.module.css
@@ -104,6 +104,12 @@
     height: 250px;
     background-color: #ffffff52;
 }
+.imgCard img {
+    border-radius: 26px;
+
+    width: 100%;
+    height: 100%;
+}
 .tituloCard {
     margin: 0;
     font-size: 40px;
