--- a/src/components/CarrosselHome/CarrosselHome.module.css
+++ b/src/components/CarrosselHome/CarrosselHome.module.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 90vh;
     margin: 93px auto 0;
+    background-color: #000000;
     cursor: grab;
 }
 .container img {
@@ -20,4 +21,31 @@
     .container, .container img {
        display: none;
     }
+}
+
+.imgBanner {
+    position: relative;
+    opacity: 0.5;
+}
+.conteudoBanner {
+    position: absolute;
+    z-index: 1000;
+    color: #fff;
+    top: 20%;
+    text-align: center;
+    width: 100%;
+    padding: 80px 0;
+    /* padding: 80px 120px 80px 30px; */
+}
+.conteudoBanner h1 {
+    /* background-color: #000; */
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 50px;
+}
+.conteudoBanner p {
+    width: 60%;
+    margin: auto;
+    font-size: 20px;
+    /* margin-top: 20px; */
 }
