--- a/src/components/AvaliacoesEdicao/AvaliacoesEdicao.module.css
+++ b/src/components/AvaliacoesEdicao/AvaliacoesEdicao.module.css
@@ -1,15 +1,15 @@
-.divTituloBotao{
+.divTituloBotao {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.titulo{
+.titulo {
     font-size: 45px;
     color: #C54477;
-    }
+}
 
-.botaoAdicionar{
+.botaoAdicionar {
     color: #fff;
     background-color: #C54477;
     width: 200px;
@@ -17,11 +17,12 @@
     border-radius: 16px;
 }
 
-.divBotao{
+.divBotao {
     justify-content: center;
     align-items: center;
     display: flex;
 }
+
 .modalOverlay {
     position: fixed;
     top: 0;
@@ -80,6 +81,11 @@
     font-size: 12px;
 }
 
+.previewImage {
+    width: 100%;
+    height: 100%;
+}
+
 .fieldsContainer {
     flex: 1;
     display: flex;
@@ -93,7 +99,8 @@
     color: black;
 }
 
-.inputField, .textareaField {
+.inputField,
+.textareaField {
     width: 100%;
     padding: 10px;
     border-radius: 8px;
@@ -110,12 +117,14 @@
 
 .modalFooter {
     display: flex;
-    justify-content: center; /* Centraliza os botões */
+    justify-content: center;
+    /* Centraliza os botões */
     gap: 10px;
     margin-top: 20px;
 }
 
-.cancelButton, .saveButton {
+.cancelButton,
+.saveButton {
     padding: 10px 20px;
     border-radius: 8px;
     font-size: 14px;
@@ -140,7 +149,7 @@
     color: white;
 }
 
-.saveButton:hover{
+.saveButton:hover {
     background-color: white;
     color: #d75485;
     border: 1px solid #d75485;
