--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -10,9 +10,24 @@
     }
     
 }
+@media screen and (max-width: 700px) {
+    .contaienrBanner {
+        display: none !important;
+    }
+    
+}
 @media screen and (max-width: 468px) {
     .container {
         padding: 0 30px;
     }
     
+}
+.contaienrBanner {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgb(54,70,82);
+    background: linear-gradient(90deg, #19222E 0%, #2F425B 80%, #1D2736 100%);
+    height: 90vh;
 }
