--- a/src/components/CarrosselHome/CarrosselHome.module.css
+++ b/src/components/CarrosselHome/CarrosselHome.module.css
@@ -1,14 +1,17 @@
 
 .container {
-    width: 100%;
-    height: 90vh;
+    width: 80%;
+    height: 70vh;
+    /* border: 1px solid white; */
     margin: 93px auto 0;
-    background-color: #000000;
+    background: rgb(54,70,82);
+    background: linear-gradient(90deg, #8a2c51 0%, #5F2139 100%);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     cursor: grab;
 }
 .container img {
     width: 100%;
-    height: 90vh;
+    height: 70vh;
 }
 
 
@@ -31,7 +34,7 @@
     position: absolute;
     z-index: 1000;
     color: #fff;
-    top: 20%;
+    top: 10%;
     text-align: center;
     width: 100%;
     padding: 80px 0;
