--- a/src/components/AvaliacoesEdicao/AvaliacoesEdicao.module.css
+++ b/src/components/AvaliacoesEdicao/AvaliacoesEdicao.module.css
@@ -154,3 +154,26 @@
     color: #d75485;
     border: 1px solid #d75485;
 }
+.cards {
+    width: 100%;
+    display: flex;
+    margin: 0 auto;
+    gap: 20px;
+    height: 60vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.cardImg {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+}
+.card {
+    border-radius: 10px;
+    cursor: pointer;
+    width: 230px;
+    height: 400px;
+}
