--- a/src/components/DecoracoesEdicao/DecoracoesEdicao.module.css
+++ b/src/components/DecoracoesEdicao/DecoracoesEdicao.module.css
@@ -1,15 +1,15 @@
-.divTituloBotao{
+.divTituloBotao {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.titulo{
+.titulo {
     font-size: 45px;
     color: #C54477;
-    }
+}
 
-.botaoAdicionar{
+.botaoAdicionar {
     color: #fff;
     background-color: #C54477;
     width: 200px;
@@ -17,11 +17,12 @@
     border-radius: 16px;
 }
 
-.divBotao{
+.divBotao {
     justify-content: center;
     align-items: center;
     display: flex;
 }
+
 .modalOverlay {
     position: fixed;
     top: 0;
@@ -67,17 +68,37 @@
     background-color: #d8d8d8;
 }
 
+.hiddenInput {
+    display: none; /* Esconde o input real */
+}
+
 .editButton {
     position: absolute;
-    top: 10px;
+    bottom: 10px;
     right: 10px;
     background-color: #d75485;
     color: white;
     border: none;
     border-radius: 50%;
     cursor: pointer;
-    padding: 6px;
-    font-size: 12px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.2s, transform 0.2s;
+}
+
+.editButton:hover {
+    background-color: #d75485;
+    transform: scale(1.1);
+}
+
+.previewImage {
+    width: 100%;
+    height: 100%;
 }
 
 .fieldsContainer {
@@ -93,7 +114,8 @@
     color: black;
 }
 
-.inputField, .textareaField {
+.inputField,
+.textareaField {
     width: 100%;
     padding: 10px;
     border-radius: 8px;
@@ -110,12 +132,13 @@
 
 .modalFooter {
     display: flex;
-    justify-content: center; /* Centraliza os botões */
+    justify-content: center;
     gap: 10px;
     margin-top: 20px;
 }
 
-.cancelButton, .saveButton {
+.cancelButton,
+.saveButton {
     padding: 10px 20px;
     border-radius: 8px;
     font-size: 14px;
@@ -140,8 +163,34 @@
     color: white;
 }
 
-.saveButton:hover{
+.saveButton:hover {
     background-color: white;
     color: #d75485;
     border: 1px solid #d75485;
+}
+
+.cards {
+    width: 100%;
+    display: flex;
+    margin: 0 auto;
+    gap: 20px;
+    height: 60vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.cardImg {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+}
+
+.card {
+    border-radius: 10px;
+    cursor: pointer;
+    width: 230px;
+    height: 400px;
 }
