Concertando alguns erros do merge

--- a/src/components/Reservas/EventoSelecionado/EventoSelecionado.module.css
+++ b/src/components/Reservas/EventoSelecionado/EventoSelecionado.module.css
@@ -27,6 +27,7 @@
     height: 400px;
     overflow-x: hidden;
     overflow-y: scroll;
+    padding-right: 5px;
     display: flex;
     gap: 10px;
 }
