--- a/src/components/DecoracoesEdicao/DecoracoesEdicao.module.css
+++ b/src/components/DecoracoesEdicao/DecoracoesEdicao.module.css
@@ -3,12 +3,29 @@
     flex-direction: row;
     justify-content: space-between;
 }
+.selectField option {
+    width: 100%;
+    padding: 10px;
+    border-radius: 8px;
+    border: none;
+    background-color: #f1f1f1 !important;
+    font-size: 14px;
+    box-sizing: border-box;
+    color: black;
+}
 
 .titulo {
     font-size: 45px;
     color: #C54477;
 }
-
+.cardText {
+    font-weight: bold;
+    color: #000;
+    margin: 0;
+    margin-top: 10px;
+    font-size: 18px;
+    text-align: center;
+}
 .botaoAdicionar {
     color: #fff;
     background-color: #C54477;
@@ -183,7 +200,7 @@
 
 .cardImg {
     width: 100%;
-    height: 100%;
+    height: 90%;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
